bugfix(Hero): fix spacing issue

--- a/packages/styles/scss/components/_hero.scss
+++ b/packages/styles/scss/components/_hero.scss
@@ -364,7 +364,7 @@
 
     @include breakpoint("large") {
       max-width: 625px;
-      padding: 0 48px 48px 72px;
+      padding: 0 48px 42px 72px;
       width: 100%;
     }
   }
